--- a/notebooks/CBLB_descriptors_generation_and_indexing.ipynb
+++ b/notebooks/CBLB_descriptors_generation_and_indexing.ipynb
@@ -7,10 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy import sparse as ss\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem\n",
     "from tqdm import tqdm"
@@ -164,6 +162,7 @@
     }
    ],
    "source": [
+    "#Data frame of building blocks\n",
     "df_bbs = pd.read_csv('../data/CBLB/building_blocks.tsv', delimiter='\\t')\n",
     "df_bbs"
    ]
@@ -249,7 +248,7 @@
     }
    ],
    "source": [
-    "# Enumerating building block types\n",
+    "# Enumerating building block types - indexes of each buildingblock type\n",
     "for i, (name, group) in enumerate(df_bbs.groupby('building_block')):\n",
     "    print(i, name)"
    ]
@@ -261,9 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating reactions rules and dictionaries\n",
-    "# Reaction rules - 2D np.array each row correspond to a reaction, and each element in a row correspont to the building block participating in the reaction\n",
-    "# IMPORTANT: the nuber two the left should be the bb1 and the number to the right should be bb2\n",
+    "# Reaction rules matrix, each element contains indexes of building block types participating in the reaction\n",
+    "# Doesn't matter the prder of buildingblocks inside each row, the order of rows doesn't matter either, but the matrix must be consistent through the whole exploration\n",
     "reaction_rules = np.array([\n",
     "    [0, 1],\n",
     "    [2, 3],\n",
@@ -277,7 +275,8 @@
     "    [18, 17],\n",
     "    [19, 20],\n",
     "])\n",
-    "# Reactions - dictianary, for each name of reaction where is a corresponding number - row number in the reaction_rules array\n",
+    "# Two dictionaries, they will be needed only in this notebook for obtaining indexes of hit pairs:\n",
+    "# Names must be exactly the same as in the hits.tsv file, and the order must be exactly the same as in the reaction rules matrix\n",
     "reactions_names = {\n",
     "    'Amide': 0, \n",
     "    'Benzoxazole': 1,\n",
@@ -304,6 +303,7 @@
     "    9: 'Triazole',\n",
     "    10: 'Williamson_ether'\n",
     "}\n",
+    "# Save reaction rules matrix as .npy array. It will be needed for the exploration experiment\n",
     "#np.save('../data/CBLB/reactions_rules.npy', reaction_rules)"
    ]
   },
@@ -314,6 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These arrays are needed fo the indexing:\n",
     "# np.array of building blocks dataframes\n",
     "bbs = np.array([group.reset_index(drop=True) for name, group in df_bbs.groupby('building_block')], dtype=object)\n",
     "# number of pairs for each reaction:\n",
@@ -386,7 +387,7 @@
     }
    ],
    "source": [
-    "# Overall number of pairs\n",
+    "# Overall number of pairs - sie of the chemical space\n",
     "pairs_per_reaction.sum()"
    ]
   },
@@ -460,7 +461,8 @@
     "    \n",
     "    idx = reaction_borders[reaction_n] + (bb_1_idx*len(bbs[reaction_rules[reaction_n][1]]) + bb_2_idx) - pairs_per_reaction[reaction_n] + 1\n",
     "    \n",
-    "    return idx"
+    "    return idx\n",
+    "# it can be checked that togather functions get_pair() and get_index() establish unique index for each pair of buildingblock in the chemical space"
    ]
   },
   {
@@ -656,6 +658,7 @@
     }
    ],
    "source": [
+    "# Dataframe of hits\n",
     "df_hits = pd.read_csv('../data/CBLB/hits.tsv', delimiter='\\t')\n",
     "df_hits"
    ]
@@ -667,6 +670,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function that finds indexes of pairs from hits dataframe in the full chemical space for a given q (threshold of overall IFP similarity)\n",
+    "# Polar IFP similarity threshold is 0.5 everywhere\n",
     "def get_hits_idxs(df_hits, q):\n",
     "    df_hits = df_hits[df_hits['IFP'] >= q]\n",
     "    hits_idxs = np.array([], dtype=np.int64)\n",
@@ -696,6 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate indexes of hits for every IFP threshold and save them as .npy array. It will be needed in the exploration experiment\n",
     "for q in [0.6, 0.7, 0.8, 0.9]:\n",
     "    hits_idxs = get_hits_idxs(df_hits, q)\n",
     "    #np.save(f'../data/CBLB/hits_idxs_q_{q}.npy', hits_idxs)"
@@ -716,6 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fingerprints generator\n",
     "fp_gen = AllChem.GetMorganGenerator(radius=2, fpSize=2048, includeChirality=True, useBondTypes=True)"
    ]
   },
@@ -729,31 +736,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 75697/75697 [01:18<00:00, 968.32fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 35406/35406 [00:37<00:00, 953.82fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████████| 150/150 [00:00<00:00, 975.43fp/s]\n",
-      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 4060/4060 [00:04<00:00, 963.72fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 66153/66153 [01:08<00:00, 968.44fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 17993/17993 [00:18<00:00, 967.05fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 30243/30243 [00:30<00:00, 981.60fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 14532/14532 [00:14<00:00, 988.50fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 28785/28785 [00:29<00:00, 978.26fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 40583/40583 [00:41<00:00, 974.48fp/s]\n",
-      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 6434/6434 [00:06<00:00, 991.20fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 34489/34489 [00:34<00:00, 987.09fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 10799/10799 [00:10<00:00, 986.49fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 62973/62973 [01:03<00:00, 985.23fp/s]\n",
-      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 3768/3768 [00:03<00:00, 987.49fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 81459/81459 [01:23<00:00, 976.23fp/s]\n",
-      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 1381/1381 [00:01<00:00, 942.38fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 50270/50270 [00:52<00:00, 959.57fp/s]\n",
-      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 6180/6180 [00:06<00:00, 987.68fp/s]\n",
-      "Calculating fingerprints: 100%|██████████████████████████████████████████████████████████████████| 22217/22217 [00:22<00:00, 994.49fp/s]\n",
-      "Calculating fingerprints: 100%|████████████████████████████████████████████████████████████████████| 9293/9293 [00:09<00:00, 991.21fp/s]\n"
+      "Calculating fingerprints: 100%|█████████| 75697/75697 [01:13<00:00, 1025.17fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 35406/35406 [00:34<00:00, 1024.64fp/s]\n",
+      "Calculating fingerprints: 100%|█████████████| 150/150 [00:00<00:00, 1048.45fp/s]\n",
+      "Calculating fingerprints: 100%|███████████| 4060/4060 [00:03<00:00, 1034.93fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 66153/66153 [01:03<00:00, 1033.98fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 17993/17993 [00:17<00:00, 1009.56fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 30243/30243 [00:29<00:00, 1020.72fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 14532/14532 [00:14<00:00, 1033.29fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 28785/28785 [00:27<00:00, 1036.32fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 40583/40583 [00:39<00:00, 1016.60fp/s]\n",
+      "Calculating fingerprints: 100%|███████████| 6434/6434 [00:06<00:00, 1000.81fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 34489/34489 [00:33<00:00, 1032.74fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 10799/10799 [00:10<00:00, 1022.33fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 62973/62973 [01:01<00:00, 1021.43fp/s]\n",
+      "Calculating fingerprints: 100%|███████████| 3768/3768 [00:03<00:00, 1014.58fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 81459/81459 [01:19<00:00, 1027.65fp/s]\n",
+      "Calculating fingerprints: 100%|███████████| 1381/1381 [00:01<00:00, 1024.60fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 50270/50270 [00:48<00:00, 1031.04fp/s]\n",
+      "Calculating fingerprints: 100%|███████████| 6180/6180 [00:06<00:00, 1026.05fp/s]\n",
+      "Calculating fingerprints: 100%|█████████| 22217/22217 [00:21<00:00, 1044.60fp/s]\n",
+      "Calculating fingerprints: 100%|███████████| 9293/9293 [00:09<00:00, 1030.43fp/s]\n"
      ]
     }
    ],
    "source": [
+    "#Fingerprints will be generated for the building block in the same order as they were enumerated initially \n",
+    "# It's just fingerprints of each individual building block.\n",
     "for n, df in enumerate(bbs):\n",
     "    fps = np.zeros((len(df), 2048), np.int8)\n",
     "    for i, smiles in enumerate(tqdm(df['smiles'], desc=\"Calculating fingerprints\", unit=\"fp\")):\n",
@@ -762,34 +771,17 @@
     "        fp = fp_gen.GetFingerprint(mol) \n",
     "        \n",
     "        fps[i] = np.array(fp).astype(np.int8)\n",
-    "\n",
+    "    # Save fingerprints as .npy array. It will be needed for the exploration experiment.\n",
     "    #np.save(f'../data/CBLB/bb_{n}.npy', fps)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158aa9c8-4d58-4634-ab8c-36351196eb5e",
+   "id": "66c1ae7a-02db-4e5e-953c-0a590f6dd7f8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "f, (ax_box, ax_hist) = plt.subplots(2, sharex=True, gridspec_kw={\"height_ratios\": (.15, .85)})\n",
-    "sns.set(style=\"ticks\")\n",
-    "\n",
-    "sns.boxplot(data=df_hits_cache[1], orient=\"h\", fliersize=1, ax=ax_box)\n",
-    "sns.histplot(data=df_hits_cache[1], bins=12, kde=True, kde_kws={'bw_adjust':12}, ax=ax_hist)\n",
-    "plt.xlim([0.59,1.01])\n",
-    "ax_box.set(yticks=[])\n",
-    "ax_hist.set_yticks([0, 500000, 1000000, 1500000, 2000000, 2500000, 3000000], ['0', '0.5M', '1M', '1.5M', '2M', '2.5M', '3M'], fontsize=12)\n",
-    "ax_hist.set_xticks([i*0.1 for i in range(6,11)], [round(i*0.1,1) for i in range(6,11)],  fontsize=12)\n",
-    "sns.despine(ax=ax_hist)\n",
-    "sns.despine(ax=ax_box, left=True)\n",
-    "ax_box.set(xlabel='')\n",
-    "ax_hist.set_xlabel('IFP Tanimoto smilarity', fontsize=14)\n",
-    "ax_hist.set_ylabel('Number of molecules', fontsize=14)\n",
-    "#plt.savefig('', dpi=300, bbox_inches='tight')\n",
-    "plt.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
